gtkpod V0.53-CVS
	NEW FEATURE: define format of filename when copying tracks from
	iPod (mainly thanks to Sam Clegg).

	NEW FEATURE: adjust volume of each track individually by using
	iPod's per-track volume adjust feature (implemted through a new
	column in the song view).

	NEW FEATURE: automatically create a playlist for each
	album/artist/genre/composer in your collection (thanks to Chris
	Cutler), and other automatic playlist generations.

	NEW FEATURE: menu items and context menu items to create new
	playlist containing displayed songs or selected songs.

	IMPROVEMENT: better alphabetize interface. Alphabetize settings
	will be remembered, different settings for playlists, sort tabs,
	and tracks possible. Also, clicking the column header three times
	will revert the view to its unsorted state.

	IMPROVEMENT: handle adding of playlist files containing
	files with relative paths.

	IMPROVEMENT: context menus more intuitive, context menus will no
	longer trigger edit mode (most of the time).

	IMPROVEMENT: the function copying songs to the iPod used a "large"
	amount of stack memory (roughly 66000 Bytes) which crashed some
	systems.

	BUGFIX: md5 hash for duplicate detection will examine the same
	number of bytes on all systems now (before it used 4xPATH_MAX).

	BUGFIX: reading and writing of the Composer ID3 tags implemented
	(so far the fields could only be set from inside gtkpod -- thanks
	to Graeme Wilford)

	BUGFIX: fixed memory holes in sync_songids(), sync_dir_ok(),
	add_playlist_by_filename().

	BUGFIX: drag and drop URIs with cr/nl at the end are handled
	correctly (thanks to Walter Bell).

gtkpod V0.52
	NEW FEATURE: Supports Playcounts, Ratings, Time Last Played /
	Time Last Modified. The playcounts and ratings are read from the
	'Play Count' file produced by iPod's firmware versions V1.3
	(playcounts only) and V2.0 (playcounts and rating).

	NEW FEATURE: If you mark several songs and change a tag in the